--- a/doc/fixes36.1
+++ b/doc/fixes36.1
@@ -169,7 +169,7 @@ if a long worm inherited inventory from a previous shape, and if an egg or
 	figurine in that inventory hatched or auto-activated, messages were
 	given when hero could see any tail segment even if head was unseen,
 	making it seem as if worm's inventory was kept in the visible segment
-Wizard will now steal any quest artifact from hero, not just own role's
+Wizard of Yendor will no longer steal your quest artifact
 prevent a hostile renegade Angel of <lawful god> from delivering taunt
 	messages which mention threats of retribution from that god
 a few types of monster (barrow wight, Nazgul, erinys) have weapon attacks that
