map_coloring: L's Coloured Walls and Floor v1 patch (adapted)
This implements the Coloured Walls and Floor v1 patch by L (Leon
Arnott):

 * http://bilious.alt.org/?296
 * http://l.j-factor.com/nethack/glyphcolor.diff

This recolors various features of the dungeon:

 * Walls of the Wizard's Tower are magenta.
 * Other walls in Gehennom (except the Valley) are red.
 * Walls of the Gnomish Mines are brown, except for room walls.
 * Walls of the Astral Plane are white.
 * Altars are bright blue / gray / black / red depending on alignment,
   except on the Astral Plane, where they are all bright magenta.

This new feature can be toggled with the new `map_coloring` option
(default on).

Compared to the original patch:

 * The original patch had no option and was thus unconditional.
 * Floors are no longer colored, since it looks ugly.
 * Walls of Sokoban are bright blue.
 * The Valley of the Dead is no longer grayscale, since it would be an
   interface screw.
 * Beehives are not colored, since it interacts poorly with the way
   special rooms are handled.
 * Lawful altars were white in the patch, but bright blue here, since
   white and gray are hard to distinguish.
 * Room preservation has been adapted for the new level compiler.
 * One of the tiny closets in Grotto Town is fixed to be colored as room
   wall instead of mine wall.
 * Orc Town area is considered rooms instead of mine wall.

--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -2671,6 +2671,9 @@ Enable mail delivery during the game (default on).  Persistent.
 An obsolete synonym for ``{\tt gender:male}''.  Cannot be set with the
 `{\tt O}' command.
 %.lp
+\item[\ib{map\_coloring}]
+Recolor terrain of special dungeon regions (default on).
+%.lp
 \item[\ib{mention\verb+_+walls}]
 Give feedback when walking against a wall (default off).
 %.lp
