--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -2464,6 +2464,20 @@ If you prefix the value with `{\tt !}' or ``{\tt no}'', you will
 exclude that alignment from being picked randomly.
 Cannot be set with the `{\tt O}' command.  Persistent.
 %.lp
+\item[\ib{attack\verb+_+mode}]
+This option controls what happens when attempting to attack monsters.
+The possible values are:
+
+%.sd
+%.si
+{\tt p} --- pacifist: don't fight anything;\\
+{\tt c} --- chat: chat with peaceful monsters, fight hostiles (default);\\
+{\tt a} --- ask: ask to fight peaceful monsters, fight hostiles;\\
+{\tt f} --- fightall: fight peaceful and hostile monsters without asking.
+%.ei
+%.ed
+%.lp
+
 \item[\ib{autodescribe}]
 Automatically describe the terrain under cursor when asked to get a location
 on the map.  The
