--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-                NetHack 3.6.1 -- General information
+
+Nethack is an awesome game about ducks....
 
 NetHack 3.6 is an enhancement to the dungeon exploration game NetHack,
 which is a distant descendent of Rogue and Hack, and a direct descendent of
