Removed cap of darkness. Added Gleipnir. Fixed a couple artifact-related bugs and cleaned up some code.

--- a/Changelog
+++ b/Changelog
@@ -63,18 +63,19 @@ New Roles
 New Artifacts
 - Gungnir: Odin's spear. Very similar to Mjollnir, but not quite as powerful and
   does not require gauntlets of power to be thrown.
-- Gae Bulg: Javelin with level-drain abilities. Throwing it at an enemy likely
-  consumes it, but on a hit will instantly kill nearly anything.
+- Gleipnir: The bindings used to contain Fenrir. Base type of grappling hook,
+  but with a huge range, increased damage, and the ability to snare enemies
+  regardless of size.
+- Gae Bulg: Javelin with level-drain abilities. Throwing it at an enemy inflicts
+  an instant kill on hit, but Gae Bulg may be lost.
 - Gae Dearg: Spear with a chance of cancelling those it strikes.
 - Gae Buidhe: Spear with level-drain abilities.
 - Carnwennan: The dagger of King Arthur. Grants stealth and searching.
 - Black Arrow: An artifact arrow with a large damage and to-hit bonus.
-- Seafoam: A trident granting the ability to breathe water.
+- Seafoam: A trident that grants the ability to breathe water.
 - Sharur: A talking warhmamer from Sumerian mythology with a large number of
   abilities. Overpowered to the point that it will likely become a quest
   artifact in the future. Invoking it turns it into a flying lion.
-- Helm of Darkness: Loosely based on the helm of Hades. A corunthaum granting
-  invisibility and stealth.
 - Vladsbane: A joke artifact which cannot be randomly generated. It's a food
   ration that warns you of undead. Really.
 - The King in Yellow: A spellbook of finger of death that grants several
