Allow user to choose between replacing or adding to existing annotation
This patch allows to add new text to the current annotation (if it's
not already at max length) rather than always replacing it completely,
which makes annotate feature more useful and removes unnecessary tedium.
If buffer is full, or player refuses to add text - old behavior is used
and text is just completely replaced.

If resulting annotation is too long to fit in the buffer then we print a
message "You cannot remember it all." and we place only as many
characters as we can fit in the buffer.

Signed-off-by: Vitaly Ostrosablin <tmp6154@yandex.ru>

--- a/doc/fixes36.1
+++ b/doc/fixes36.1
@@ -532,6 +532,8 @@ when #force reports that a chest's lock is already broken or already unlocked,
 	already known, rather than as "a broken chest" or "an unlocked chest"
 honor wish for "locked", "unlocked", or "broken" chest or box
 honor wish for "empty" container including statue, bag-o-tricks, horn-o-plenty
+	if annotation for dungeon level is already set, allow player to choose
+to add to the annotation rather than completely replacing it
 
 
 Fixes to Post-3.6.0 Problems that Were Exposed Via git Repository
