--- a/Changelog
+++ b/Changelog
@@ -22,7 +22,6 @@ General Changes
   possible into the existing tone.
 - Additional graves, hallucinations, rumors, scroll and wand names,  and
   the like.
-- Non-weapon artifacts can now be granted through sacrifice.
 - Spellcasting monsters have access to a much larger variety of dangerous
   spells.
 - Engraving "The Yellow Sign" will cause bad things to happen to you and those
@@ -51,6 +50,8 @@ General Changes
   for powerful items in your inventory instead of gold, and you can also use
   decks of cards to gamble on your immortal soul with them.
 - All demon lords have had their AC significantly lowered.
+- The wailing of the banshee message was changed slightly to account for the
+  addition of banshees to the game.
 
 Quest Nemesis Changes
 - Lord Surtur can create level-shaking earthquakes when he attacks.
@@ -74,34 +75,20 @@ New Roles
   card games and the shows that center on them.
 
 New Artifacts
-- Gungnir: Odin's spear. Very similar to Mjollnir, but not quite as powerful and
-  does not require gauntlets of power to be thrown.
-- Gleipnir: The bindings used to contain Fenrir. Base type of grappling hook,
-  but with a huge range, increased damage, and the ability to snare enemies
-  regardless of size.
-- Gae Bulg: Javelin with level-drain abilities. Throwing it at an enemy inflicts
-  an instant kill on hit, but Gae Bulg may be lost.
-- Gae Dearg: Spear with a chance of cancelling those it strikes.
-- Gae Buidhe: Spear with level-drain abilities.
-- Carnwennan: The dagger of King Arthur. Grants stealth and searching.
-- Black Arrow: An artifact arrow with a large damage and to-hit bonus.
-- Seafoam: A trident that grants the ability to breathe water.
-- Sharur: A talking warhmamer from Sumerian mythology with a large number of
-  abilities. Overpowered to the point that it will likely become a quest
-  artifact in the future. Invoking it turns it into a flying lion. Must be
-  wished for.
-- Vladsbane: A joke artifact which cannot be randomly generated. It's a food
-  ration that warns you of undead. Really.
-- The King in Yellow: A spellbook of finger of death that grants several
-  powerful intrinsics upon reading. Reading or invoking it summons the optional
-  superboss of the same name, and very likely ends your game in a matter of
-  turns. If you find it, it also grants hallucination resistance while held, so
-  it's not 100% useless.
-- The Holographic Void Lily: The cartomancer quest artifact. Greatly increases
-  spellcasting abilities.
-- Gleipnir: The bindings of the wolf Fenrir. A grappling hook with extremely
-  long range, improved damage and to-hit, and the ability to hook creatures
-  of any size.
+- Gungnir
+- Gleipnir
+- Gae Bulg
+- Gae Dearg
+- Gae Buidhe
+- Carnwennan
+- Seafoam
+- Sharur
+- Luckless Folly
+- Dismounter
+- Final Death
+- Vladsbane (joke artifact, must be wished for)
+- The King in Yellow
+- The Holographic Void Lily
 
 Dungeon Generation
 - Statuary level: A level with many statues and statue traps. One statue
@@ -116,10 +103,9 @@ Dungeon Generation
 - Underground Rivers: Paxed's underground rivers patch has been implemented.
 
 New Monster Spells
-- Sonic Scream: Deals massive damage to a single non-deaf target.
-- Gas Cloud: Generates a small stinking cloud around the target.
-- Slime Spray: Makes the target slippery, possibly causing them to drop their
-  wielded items.
+- Sonic Scream
+- Gas Cloud
+- Slime Spray
 
 New Items
 - Bone Knife
@@ -162,6 +148,7 @@ New Items
 - Void Dragon Scales
 
 New Monsters
+- Giant Fly
 - Memory Hound
 - Weeping Eye
 - Serval
@@ -191,6 +178,7 @@ New Monsters
 - Velociraptor
 - T-Rex
 - Cartomancer
+- Banshee
 
 New Unique Monsters
 - Lord Sankis
