New Role: Dragonmaster! See the changelog for details. A lot of the quest material is filler (and filled with typos) but the class functions as intended.

--- a/Changelog
+++ b/Changelog
@@ -73,6 +73,11 @@ New Roles
   receive a harsh alignment penalty for using magic markers (you feel guilty
   for forging a card). The entire role affectionately parodies various trading
   card games and the shows that center on them.
+- Dragonmaster: This role is similar to that of a knight, but they begin with
+  a pet baby dragon instead of a pony, which they can eventually raise into a
+  powerful steed. Due to being raised by dragons, they are averse to wearing
+  dragon scales and dragon scale mail, which makes their midgame very difficult.
+  Their quest artifact is Sharur, a talking ornate mace.
 
 New Artifacts
 - Gungnir
@@ -177,15 +182,19 @@ New Monsters
 - Sea Horse
 - Velociraptor
 - T-Rex
-- Cartomancer
 - Banshee
+- Cartomancer
+- Dragonmaster
+- Drake (Dragonmaster Quest)
 
 New Unique Monsters
-- Lord Sankis
+- Emperor Sankis
 - Master of Cats
 - Lord of the Foocubi
 - Mephisto
 - King in Yellow
 - Lord of the Cards
-- Cartomancer
 - Dal Zethire
+- Drakemother
+- Slipscale the Betrayer
+- dragon of the Betrayer
