Added grim reaper to changelog.

--- a/Changelog
+++ b/Changelog
@@ -195,6 +195,7 @@ New Unique Monsters
 - Mephisto
 - King in Yellow
 - Lord of the Cards
+- Grim Reaper
 - Dal Zethire
 - Drakemother
 - Slipscale the Betrayer
