Cloak of reflection, blessed mask grants unchanging after transformation.

--- a/Changelog
+++ b/Changelog
@@ -183,6 +183,7 @@ New Items
 - Snappy Tuxedo
 - Iron Mantle
 - Cloak of Flight
+- Cloak of Reflection
 - Tower Shield
 - Hide Shield
 - Rogues Gloves
