Monsters with heads swallow instead of engulfing.

--- a/Changelog
+++ b/Changelog
@@ -106,6 +106,7 @@ General Changes
   grow up into a falcon and then into a giant falcon. They are balanced around
   the existing pet options.
 - Death is generated with a scythe.
+- Monsters with heads now "swallow" you instead of "engulfing" you.
 
 Quest Nemesis Changes
 - Lord Surtur can create level-shaking earthquakes when he attacks.
