Added sonic damage and various sonic things.

--- a/Changelog
+++ b/Changelog
@@ -199,6 +199,8 @@ New Monster Spells
 - Slime Spray
 
 New Items
+- Ornate Mace
+- Silver Mace
 - Bone Knife
 - Throwing Axe
 - Razor Whip
@@ -228,6 +230,7 @@ New Items
 - Wand of Wonder
 - Wand of Acid
 - Wand of Poison Gas
+- Wand of Sonics
 - Bony Quill
 - Ooze Dragon Scale Mail
 - Razor Dragon Scale Mail
@@ -300,8 +303,10 @@ New Monsters
 - Cerastes
 - Serpopard
 - Lindorm
+- Storm Elemental
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
+- Infernal (Non-generated Race)
 - Drake (Dragonmaster Quest)
 
 New Unique Monsters
