Readme and changelog updates.

--- a/Changelog
+++ b/Changelog
@@ -307,6 +307,9 @@ New Monsters
 - Serpopard
 - Lindorm
 - Storm Elemental
+- Screamer
+- Purple Dragon
+- Baby Purple Dragon
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
 - Infernal (Non-generated Race)
