Psychic beams and attacks added.

--- a/Changelog
+++ b/Changelog
@@ -232,6 +232,7 @@ New Items
 - Wand of Acid
 - Wand of Poison Gas
 - Wand of Sonics
+- Wand of Psionics
 - Bony Quill
 - Ooze Dragon Scale Mail
 - Razor Dragon Scale Mail
