--- a/README
+++ b/README
@@ -14,8 +14,9 @@ be found on the github page and there are encyclopedia entries for some new
 additions, but as of this moment neither is complete.
 
 Installation is the same as installation for vanilla 3.6.1. Please note that
-SpliceHack currently compiles to a binary with the same name as NetHack, so take
-care when compiling on a system where NetHack is installed.
+SpliceHack currently compiles to its own binary and uses splicehackdir instead
+of nethackdir on unix, but is untested on windows, and still compiles as nethack
+there.
 
 SpliceHack follows the conditions put forth in the license provided by the
 NetHack Dev Team (see dat/license). If you are aware of any licensing issues
