--- a/README
+++ b/README
@@ -19,7 +19,7 @@ of nethackdir on unix, but is untested on windows, and still compiles as nethack
 there.
 
 SpliceHack follows the conditions put forth in the license provided by the
-NetHack Dev Team (see dat/license). If you are aware of any licensing issues
-with SpliceHack, please contact us through github.
+NetHack Dev Team (see dat/license). If you are aware of any licensing or
+permissions issues with SpliceHack, please contact us through github.
 
                   -- Good luck, and happy Hacking --
